# sdfglib

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  LICENSE  MLIR_FRONTEND_SUMMARY.md  README.md
arg-capture-io/: CMakeLists.txt
arg-capture-io/include/: arg_capture_io.h  base64.h  primitive_types.h
arg-capture-io/include/daisy_rtl/: arg_capture_io.h  primitive_types.h
arg-capture-io/src/: arg_capture_io.cpp  base64.cpp
arg-capture-io/tests/: CMakeLists.txt  capture_tests.cpp  ser_deser_tests.cpp  test.cpp  test.h
examples/applications/: CMakeLists.txt  matmul_replayer.cpp  rpc_opt.cpp
mlir/: .gitignore  CMakeLists.txt  README.md  example_identity.py  pyproject.toml  requirements.txt
mlir/benchmarks/torch/: test_backend.py  test_compile.py
mlir/bindings/: CMakeLists.txt  bindings.cpp
mlir/docc/ai/: __init__.py  pytorch.py
mlir/docc/mlir/: __init__.py
mlir/docc/torch/: __init__.py
mlir/docc_ml/: __init__.py
mlir/lib/Conversion/: CMakeLists.txt
mlir/python/: __init__.py
mlir/test/: CMakeLists.txt  lit.cmake.cfg.py  lit.cmake.site.cfg.py.in  sdfg-opt.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/sdfg-lsp-server/: CMakeLists.txt  sdfg-lsp-server.cpp
mlir/tools/sdfg-opt/: CMakeLists.txt  sdfg-opt.cpp
mlir/tools/sdfg-translate/: CMakeLists.txt  sdfg-translate.cpp
opt/: CMakeLists.txt
opt/cmake/: sdfgoptConfig.cmake.in
opt/src/analysis/: scop_analysis.cpp
opt/src/cuda/: cuda.cpp
opt/src/offloading/: data_offloading_node.cpp  utils.cpp
opt/src/passes/: dot_expansion_pass.cpp  gemm_expansion_pass.cpp  opt_pipeline.cpp
opt/src/transformations/: highway_transform.cpp  omp_transform.cpp  polly_transform.cpp
opt/tests/: CMakeLists.txt  test.cpp
opt/tests/analysis/: scop_analysis_test.cpp
opt/tests/cuda/: cuda_kernel_test.cpp  cuda_library_nodes_test.cpp
opt/tests/fixtures/: polybench.h
opt/tests/transformations/: highway_transform_test.cpp  omp_transform_test.cpp  polly_transform_test.cpp
python/: .gitignore  CMakeLists.txt  README.md  generate_summary_csv.py  pyproject.toml  setup.py
python/benchmarks/npbench/: harness.py  run_npbench.py  run_polybench_suite.py
python/bindings/: bindings.cpp  py_structured_sdfg.cpp  py_structured_sdfg.h  py_structured_sdfg_builder.cpp  py_structured_sdfg_builder.h
python/bindings/analysis/: py_analysis.h  py_arguments_analysis.h  py_assumptions_analysis.h  py_users.h  (+7 more)
python/docc/: __init__.py  ast_parser.py  ast_utils.py  compiled_sdfg.py  convolution.py  expression_visitor.py  linear_algebra.py  onnx_ops.py  pytorch_integration.py
python/sdfglib/: __init__.py  mlir_frontend.py
python/src/: bindings.cpp  py_structured_sdfg.cpp
python/tests/: test_mlir_frontend.py
rpc/: CMakeLists.txt
rpc/cmake/: sdfgrpcConfig.cmake.in
rpc/tests/: CMakeLists.txt  local_transfertuning_transform_test.cpp  test.cpp
rtl/: CMakeLists.txt
rtl/include/: daisy_instrumentation.h  daisy_rtl.h  daisy_rtl_api.h  daisy_rtl_internal.h  primitive_types.h
rtl/src/: capture.cpp  daisy_capture.cpp  daisy_instrumentation.cpp  daisy_rtl.cpp  instrumentation.cpp
rtl/tests/: rtl_tests.py
sdfg/: CMakeLists.txt  README.md
sdfg/cmake/: sdfglibConfig.cmake.in
sdfg/src/: function.cpp  structured_sdfg.cpp
sdfg/tests/: CMakeLists.txt  element_test.cpp  sdfg_test.cpp  structured_sdfg_test.cpp  test.cpp
targets/: CMakeLists.txt
targets/include/: data_offloading_node.h  utils.h
targets/src/: data_offloading_node.cpp  utils.cpp
targets/tests/: CMakeLists.txt
tests/: CMakeLists.txt  conditional_schedule_test.cpp  element_test.cpp  schedule_test.cpp  sdfg_test.cpp  structured_sdfg_test.cpp  test.cpp
tests/analysis/: arguments_analysis_test.cpp  assumptions_analysis_test.cpp  control_flow_analysis_test.cpp  data_dependency_analysis_test.cpp  data_parallelism_analysis_test.cpp  degrees_of_knowledge_analysis_test.cpp  degrees_of_knowledge_analysis_tests.cpp  flop_analysis_test.cpp  happens_before_analysis_test.cpp  loop_analysis_info_test.cpp  loop_analysis_test.cpp  loop_dependency_analysis_test.cpp  mem_access_range_analysis_test.cpp  memlet_analysis_test.cpp  memlet_delinearization_analysis_test.cpp  scop_analysis_test.cpp  type_analysis_test.cpp  users_test.cpp  work_depth_analysis_test.cpp
tests/builder/: function_builder_test.cpp  sdfg_builder_test.cpp  structured_sdfg_builder_test.cpp  structured_sdfg_conversion_test.cpp
tests/control_flow/: interstate_edge_test.cpp  state_test.cpp
tests/data_flow/: code_node_test.cpp  data_flow_graph_test.cpp  data_flow_node_test.cpp  tasklet_test.cpp
tests/deepcopy/: structured_sdfg_deep_copy_test.cpp
tests/fixtures/: polybench.h  rodinia.h
tests/frontend/: mlir_frontend_test.cpp
tests/graph/: graph_algorithms_test.cpp  graph_test.cpp
tests/optimizations/: optimizer_test.cpp
tests/passes/: debug_info_propagation_test.cpp  pipeline_test.cpp
tests/replace/: symbol_replace_test.cpp
tests/serializer/: json_serializer_test.cpp
tests/structured_control_flow/: block_test.cpp  for_each_test.cpp  if_else_test.cpp  loop_test.cpp  map_test.cpp  return_test.cpp  sequence_test.cpp
tests/symbolic/: analysis_test.cpp  assumptions_test.cpp  conjunctive_normal_form_test.cpp  extreme_values_test.cpp  maps_test.cpp  polynomials_test.cpp  sets_test.cpp  symbolic_test.cpp  utils_test.cpp
tests/transformations/: diamond_tiling_test.cpp  isl_scheduler_test.cpp  kernel_local_storage_test.cpp  loop_distribute_test.cpp  loop_interchange_test.cpp  loop_skewing_test.cpp  loop_slicing_test.cpp  loop_tiling_test.cpp  loop_to_kernel_dim_test.cpp  loop_unroll_test.cpp  out_local_storage_test.cpp  parallelization_test.cpp  recorder_test.cpp  vectorization_test.cpp
tests/types/: array_test.cpp  function_test.cpp  pointer_test.cpp  primitive_type_test.cpp  reference_test.cpp  scalar_test.cpp  sizeof_test.cpp  structure_test.cpp  utils_test.cpp
tests/visitor/: structured_sdfg_visitor_test.cpp
tests/visualizer/: dot_visualizer_test.cpp
tutorial/printf_target/: CMakeLists.txt  target_tutorial.md
(+1288 files in other folders)
