[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "docc_ml"
version = "0.0.1"
description = "Python bindings and MLIR conversion for JIT compiling PyTorch models to SDFGs."
authors = [{name = "Daisytuner"}]
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch-mlir",
]

[tool.scikit-build]
wheel.packages = ["docc_ml"]
cmake.source-dir = ".."
cmake.define = { MLIR_BUILD_FRONTEND = "ON", MLIR_DIR = "/usr/lib/llvm-19/lib/cmake/mlir", SDFG_BUILD_TESTS = "OFF", BUILD_TESTS = "OFF", BUILD_BENCHMARKS = "OFF", BUILD_BENCHMARKS_GOOGLE = "OFF" }
